fix(core): 🐛 file page sticky header overlapping TOC
Closes: #797

--- a/skinStyles/mediawiki/action/mediawiki.action.view.filepage.less
+++ b/skinStyles/mediawiki/action/mediawiki.action.view.filepage.less
@@ -26,6 +26,10 @@
 	border: 0;
 	.citizen-sticky-header;
 
+	@media ( min-width: @min-width-breakpoint-desktop ) {
+		right: ~'calc( var( --space-xl ) * -1 )'; // Fix #797
+	}
+
 	li {
 		padding-right: 0;
 	}
